Added sourceset in build.gradle to fix auto import
Signed-off-by: zlmonroe <zachary.lynn.monroe@gmail.com>

--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,18 @@ repositories {
   mavenCentral()
 }
 
-
+sourceSets {
+    main {
+        java {
+            srcDirs = ["src/"]
+        }
+    }
+    test {
+        java {
+            srcDirs = ["src/"]
+        }
+    }
+}
 ///////////////////////////////////////////////////////////////////////////
 // JUnit 5 include
 ///////////////////////////////////////////////////////////////////////////
